-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 16, 17
-
Component/s: hotspot
-
b14
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8267013 | 16u-cpu | Jaroslav Bachorík | P3 | Resolved | Fixed | master |
| JDK-8265530 | 16.0.2 | Jaroslav Bachorík | P3 | Resolved | Fixed | b04 |
| JDK-8265663 | 15.0.4 | Markus Grönlund | P3 | Closed | Duplicate | b04 |
| JDK-8268022 | 11.0.12 | Jaroslav Bachorík | P3 | Resolved | Fixed | b05 |
- backported by
-
JDK-8265530 OldObjectSample events too expensive
-
- Resolved
-
-
JDK-8267013 OldObjectSample events too expensive
-
- Resolved
-
-
JDK-8268022 OldObjectSample events too expensive
-
- Resolved
-
-
JDK-8265663 OldObjectSample events too expensive
-
- Closed
-
- relates to
-
JDK-8265750 Fatal error in safepoint.cpp after backport of 8258414
-
- Resolved
-
-
JDK-8265718 Build failure after JDK-8258414 11u backport
-
- Resolved
-
-
JDK-8258826 Wait-free hashtable for stacktraces
-
- Closed
-
- links to
-
Commit
openjdk/jdk15u-dev/90b6d69d
-
Commit
openjdk/jdk16u/5d5b122e
-
Commit
openjdk/jdk/a9b156d3
-
Review
openjdk/jdk15u-dev/70
-
Review
openjdk/jdk16u/107
-
Review
openjdk/jdk/2644
-
Review
openjdk/jdk/2645
-
Review
openjdk/jdk/2780