8258414: OldObjectSample events too expensive

Co-authored-by: Florian David <florian.david@datadoghq.com>
Reviewed-by: jbachorik